--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ opencv-python>=4.1.2
 Pillow
 PyYAML>=5.3.1
 scipy>=1.4.1
-torch==1.11
+torch>=2.0
 torchvision>=0.8.1
 tqdm>=4.41.0
 
@@ -23,7 +23,7 @@ pandas
 # coremltools>=4.1
 # onnx>=1.8.1
 # scikit-learn==0.19.2  # for coreml quantization
-onnxruntime==1.14.1
+onnxruntime>=1.20
 
 # extras --------------------------------------
 thop  # FLOPS computation
