--- a/data/multi_kpts.yaml
+++ b/data/multi_kpts.yaml
@@ -1,5 +1,6 @@
 train: /content/drive/MyDrive/yolo_pose/data/train_data/
-val: /content/drive/MyDrive/yolo_pose/data/val_data/
+val: /content/drive/MyDrive/yolo_pose/data/valid_data/
+test: /content/drive/MyDrive/yolo_pose/data/test_data/
 
 # number of classes
 nc: 2
